use ProcessBuilder to merge input and error stream